[package]
name = "evdev-rs"
version = "0.3.0"
authors = ["Nayan Deshmukh <nayan26deshmukh@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["evdev"]
readme = "README.md"
repository = "https://github.com/ndesh26/evdev-rs"
homepage = "https://github.com/ndesh26/evdev-rs"
documentation = "http://ndesh26.github.io/evdev-rs"
description = """
Bindings to libevdev for interacting with evdev devices. It moves the
common tasks when dealing with evdev devices into a library and provides
a library interface to the callers, thus avoiding erroneous ioctls, etc.
"""

[dependencies]
evdev-sys = { path = "evdev-sys", version = "0.2.0" }
nix = "0.13.0"
libc = "0.2.48"
bitflags = "1.0.4"
log = "0.4.6"
